1998-10-31  Alex Roberts  <bse@dial.pipex.com>

	* Tidied up Make warnings... Clean build on all ports..

1998-10-29  Alex Roberts  <bse@dial.pipex.com>

	* Upped version numbers to 0.4.8 (in anticipation of next release)

1998-10-29  Alex Roberts  <bse@dial.pipex.com>

	* gE_document.c: When you change document, titlebar changes with the
	  filename...

1998-10-28  Alex Roberts  <bse@dial.pipex.com>

	* toolbar.c: Added Quit button...

1998-10-27  Alex Roberts  <bse@dial.pipex.com>

	* commands.c: (doc_changed_cb): Sets a visible reminder the file has
	  been modified (At last! I've really been meaning to do this ;)...

1998-10-25  Alex Roberts  <bse@dial.pipex.com>

	* gE_document.c: (gE_document_set_read_only): Changes File label to
	  show a visible reminder that the file open is Read-Only or not..
	  (**FIX-ME** This is kinda broke on Untitled files ;)...

1998-10-25  Alex Roberts  <bse@dial.pipex.com>

	* Fixed 'gEdit unable to compile with Gtk+ 1.0.x' bug.. Modified LOTS
	  of files.. mostly putting in '#ifdef GTK_HAVE_FEATURES_1_1_0' -
	  Please remember people.. If you add any Gtk+ 1.1.x ONLY things, 
	  please put in #ifdef GTK_HAVE_FEATURES_1_1_0, some people only run
	  Gtk+ 1.0.x, and dont want the hastle of using Gtk+ 1.1.x (and having
	  Gimp broken ;)...

1998-10-24  Alex Roberts  <bse@dial.pipex.com>

	- Bah... lets remember...
	* toolbar.c: (gE_create_toolbar): Checks preferences file for haveing
	toolbar buttons reliefed... if TRUE, sets RELIEF, if FALSE, does
	nothing..
	
	* toolbar.[ch]: tb_relief_on/tb_relief_off : new callbacks for menu
	
	* menus.c: Added tb_relief_on/off to Toolbar menu...
	
	- (Relief only works with Gtk+ 1.1.x)

1998-10-23  Martin Baulig  <martin@home-of-linux.org>

	* src/gE_plugin.c (load_library): Call g_module_make_resistent ().

	* src/gE_plugin.h (GE_PLUGIN_LOG_DOMAIN): Define to `gEdit-Plugin'.
	If included from a plugin, set G_LOG_DOMAIN to GE_PLUGIN_LOG_DOMAIN
	and include <gnome.h> after that.
