@@ -1,3 +1,7 @@
+1998-11-08  Chris Lahey  <clahey@umich.edu>
+
+	* src/gedit.c (main): Switched to popt.
+
 1998-10-31  Alex Roberts  <bse@dial.pipex.com>
 
 	* Tidied up Make warnings... Clean build on all ports..
